# exercism_solutions

./: .gitignore  .gitmodules  README.md
c/etl/: etl.c  etl.h
c/hamming/: compile_flags.txt  hamming.c
c/resistor-color/: compile_flags.txt
go/acronym/: acronym.go
go/atbash-cipher/: atbash_cipher.go  go.mod
go/binary-search/: binary_search.go
go/binary-search-tree/: binary_search_tree.go  go.mod
go/clock/: clock.go
go/collatz-conjecture/: collatz_conjecture.go
go/darts/: darts.go
go/difference-of-squares/: difference_of_squares.go
go/grains/: grains.go
go/hamming/: go.mod  hamming.go  hamming_test.go
go/isogram/: isogram.go
go/list-ops/: list_ops.go
go/luhn/: cases_test.go  luhn.go
go/phone-number/: go.mod  phone_number.go
go/proverb/: proverb.go
go/pythagorean-triplet/: go.mod  pythagorean_triplet.go  pythagorean_triplet_test.go
go/raindrops/: raindrops.go
go/reverse-string/: reverse_string.go
go/run-length-encoding/: run_length_encoding.go
go/scrabble-score/: scrabble_score.go
go/space-age/: space_age.go
go/sum-of-multiples/: sum_of_multiples.go
go/two-fer/: two_fer.go
javascript/gigasecond/: gigasecond.js
javascript/matrix/: matrix.js
javascript/pangram/: pangram.js  pangram.spec.js
javascript/resistor-color-duo/: resistor-color-duo.js
typescript/collatz-conjecture/: Cargo.toml  HELP.md  README.md  collatz-conjecture.ts  collatz-conjecture_bench.ts  collatz-conjecture_test.ts  deno.json  import_map.json
typescript/collatz-conjecture/bindings/: bindings.ts
typescript/collatz-conjecture/src/: lib.rs
(+105 files in other folders)
