[package]
name = "collatz-conjecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "__"
crate-type = ["cdylib"]

[dependencies]
deno_bindgen = "0.7.0"
serde = { version = "1", features = ["derive"] }
